K8S/mssql-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-depl
  labels:
    app: mssql-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: mssql-depl
  template:
    metadata:
      name: mssql-depl
      labels:
        app: mssql-depl
    spec:
      containers:
        - name: mssql-depl
          image: mcr.microsoft.com/mssql/server:2025-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: mssqldb
      volumes:
        - name: mssqldb
          persistentVolumeClaim:
            claimName: mssql-claim

---
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql-depl
  ports:
    - name: mssql-depl
      protocol: TCP
      port: 1433
      targetPort: 1433
      
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql-depl
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
