K8S/platforms-np-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-gateway
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # Route for /api/command -> Command Service
          - path: /api/commands
            pathType: Prefix
            backend:
              service:
                name: commands-clusterip-srv
                port:
                  number: 80
          # Default route for everything else -> Platform Service
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platforms-clusterip-srv
                port:
                  number: 80
